<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.PocketMoodle.ClassPageFragment"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp">

    <!-- Header Section layout -->
    <RelativeLayout
        android:orientation="horizontal"
        android:id="@+id/headerSection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/setclassTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text=""
            android:textSize="30sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Spinner
            android:id="@+id/change_class_spinner"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <!-- Document Section layout -->
    <RelativeLayout
        android:orientation="horizontal"
        android:id="@+id/documentSection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerSection"
        android:gravity="center_horizontal"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/openViewDocuments"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:layout_alignParentTop="true"
            android:text="View Documents"/>

        <Button
            android:id="@+id/openUploadDocument"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:layout_below="@id/openViewDocuments"
            android:text="@string/upload_document"/>

    </RelativeLayout>

    <!-- Grades Section layout -->
    <RelativeLayout
        android:orientation="horizontal"
        android:id="@+id/gradesSection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/documentSection"
        android:layout_alignStart="@+id/documentSection"
        android:layout_below="@+id/documentSection"
        android:gravity="center_horizontal"
        android:layout_alignRight="@+id/documentSection"
        android:layout_alignEnd="@+id/documentSection">

        <Button
            android:id="@+id/grades"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:text="@string/grades"/>

    </RelativeLayout>

    <!-- Discussion Board Section layout -->
    <RelativeLayout
        android:orientation="horizontal"
        android:id="@+id/discussionSection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/gradesSection"
        android:layout_alignLeft="@+id/gradesSection"
        android:layout_alignStart="@+id/gradesSection"
        android:layout_marginTop="12dp"
        android:layout_alignRight="@+id/gradesSection"
        android:layout_alignEnd="@+id/gradesSection">

        <Button
            android:id="@+id/openDiscussionBoard"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:text="@string/open_discussion_board"/>
    </RelativeLayout>

    <!-- Announcement Section layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/announcementSection"
        android:background="@drawable/custom_solid_border"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/discussionSection"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:padding="15dp"
            android:text="@string/announcement" />

        <Button
            android:id="@+id/add_discussion_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:text="@string/add_button_discussion" />

        <Button
            android:id="@+id/remove_discussion_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/add_discussion_group"
            android:layout_toStartOf="@+id/add_discussion_group"
            android:padding="5dp"
            android:text="@string/remove_button_discussion" />

        <ListView
            android:id="@+id/list_of_announcements"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/remove_discussion_group" />
    </RelativeLayout>

</RelativeLayout>